# SEC-GenerativeSearch

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  EMBEDDING_MODELS.md  LICENSE  LeetCode Patterns.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
deploy/: Dockerfile.api  Dockerfile.frontend  cloudbuild.yaml  docker-compose.yml  docker-entrypoint.sh
deploy/cloud/: api-service.yaml  demo-reset-job.yaml  frontend-service.yaml
deploy/grafana/: sec-generative-search.json
deploy/nginx/: nginx.conf
frontend/: .dockerignore  .gitignore  .npmrc  README.md  eslint.config.mjs  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  postcss.config.mjs  tsconfig.json  vitest.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: app-shell.tsx  catalogue-refresh-card.tsx  edgar-identity-card.tsx  login-gate.tsx  model-picker.tsx  provider-key-row.tsx  provider-vault-card.tsx  skeleton.tsx  welcome-gate.tsx
frontend/src/lib/: admin-session.ts  api-types.ts  api.ts  backend.ts  format.ts  provider-keys-crypto.ts  provider-keys.ts  security-headers.ts  use-batched-stream-text.ts  user-vault.ts
frontend/tests/: setup.ts
frontend/tests/functional/: catalogue-refresh.test.tsx  chat-streaming.test.tsx  citation-views.test.tsx  provider-workflow.test.tsx  rag-streaming.test.tsx  use-batched-stream-text.test.ts
frontend/tests/security/: _sse-harness.ts  admin-proxy.test.ts  admin-session-route.test.ts  admin-session.test.ts  api-client.test.ts  aria-discipline.test.tsx  chat-page.test.tsx  chat-reducer.test.ts  csp.test.ts  edgar-identity-card.test.tsx  enrol-page.test.tsx  error-boundary.test.tsx  eslint-rules.test.ts  external-assets.test.ts  login-gate.test.tsx  middleware.test.ts  model-picker.test.tsx  pages.test.tsx  provider-keys-vault.test.ts  provider-keys.test.ts  provider-settings.test.tsx  rag-page.test.tsx  skeleton.test.tsx  storage-discipline.test.ts  user-vault.test.ts  welcome-gate.test.tsx
src/sec_generative_search/: __init__.py
src/sec_generative_search/api/: __init__.py  access_log.py  app.py  dependencies.py  errors.py  middleware.py  policies.py  schemas.py  tasks.py  websocket.py
src/sec_generative_search/cli/: __init__.py  _json.py  backup.py  evaluate.py  evict.py  ingest.py  main.py  manage.py  portable.py  provider.py  rag.py  reindex.py  search.py
src/sec_generative_search/config/: __init__.py  constants.py  settings.py
tests/: conftest.py
tests/api/: conftest.py  test_access_log.py  test_admin_users.py  test_auth_routes.py  test_auth_tiers.py  test_catalogue_refresh.py  test_correlation_middleware.py  test_dependencies.py  test_edgar_identity.py  test_filings.py  test_ingest.py  test_metrics.py  test_middleware.py  test_policies.py  test_provider_health.py  test_providers.py  test_rag_error_consistency.py  test_rag_plan.py  test_rag_query.py  test_rag_stream.py  test_resources.py  test_search.py  test_security_cross_cutting.py  test_security_route_inventory.py  test_session.py  test_task_manager.py  test_threadpool_dispatch.py  test_websocket.py
tests/cli/: test_backup.py  test_evaluate.py  test_evict.py  test_ingest.py  test_main.py  test_manage.py  test_output_json.py  test_portable.py  test_provider.py  test_rag.py  test_reindex.py  test_search.py
tests/config/: test_constants.py  test_settings.py
tests/core/: test_correlation.py  test_credentials.py  test_edgar_identity.py  test_exceptions.py  test_logging.py  test_metrics.py  test_provider_health.py  test_resilience.py  test_security.py  test_types.py  test_user_auth.py
tests/database/: conftest.py  test_backup.py  test_client.py  test_credentials.py  test_metadata.py  test_migrations.py  test_portable.py  test_reindex.py  test_store.py  test_users.py
tests/fixtures/: retrieval_eval_cases.json
tests/integration/: __init__.py  conftest.py  test_citation_integrity_integration.py  test_ingestion_integration.py  test_retrieval_quality_integration.py
tests/load/: conftest.py  test_event_loop_stall.py  test_ingestion_load.py  test_retrieval_load.py  test_streaming_load.py
tests/ops/: test_deployment_artifacts.py  test_observability_dashboard.py
tests/pipeline/: __init__.py  test_chunk.py  test_fetch.py  test_orchestrator.py  test_parse.py
tests/providers/: test_anthropic.py  test_base.py  test_catalogue.py  test_factory.py  test_gemini.py  test_local.py  test_local_llm.py  test_openai.py  test_openai_compat.py  test_openai_compat_vendors.py  test_openrouter.py  test_refresh.py  test_registry.py  test_vendor_behaviour.py
tests/rag/: conftest.py  test_citations.py  test_context.py  test_evaluation.py  test_modes.py  test_orchestrator.py  test_orchestrator_metrics.py  test_prompt_privacy.py  test_prompts.py  test_query_understanding.py
tests/search/: test_evaluation.py  test_retrieval.py
(+87 files in other folders)
